<resources>
    <string name="app_name">VodafoneTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_action_bar">Countries</string>
    <string name="search_hint">Search by airline name</string>
    <string name="headquarters">Headquarters</string>
    <string name="detail_fragment_button">Visit</string>
    <string name="bottom_sheet_title">Add new airline</string>
    <string name="lbl_name">Airline name</string>
    <string name="lbl_slogan">Slogan</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_head_quaters">Headquaters</string>
    <string name="bottom_sheet_confirm_button">Confirm</string>
    <string name="bottom_sheet_cancel_button">Cancel</string>
    <string name="established">Established</string>
    <string name="hint_title_error">Please enter the title.</string>
    <string name="hint_slogan_error">Please enter the slogan.</string>
    <string name="hint_country_error">Please enter the country.</string>
    <string name="hint_headquaters_error">Please enter the headquaters.</string>
    <string name="hint_established_error">Please enter the established year.</string>
</resources>