<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    tools:context=".ui.fragment.airlinesfragment.bottomsheet.BottomSheetFragment">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/bottom_sheet_title"
        android:textSize="20sp"
        android:textColor="@color/airline_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/search_background"
        android:hint="@string/lbl_name"
        app:hintTextColor="@color/grey_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_tittle"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_slogan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/search_background"
        android:hint="@string/lbl_slogan"
        app:hintTextColor="@color/grey_700"
        app:layout_constraintEnd_toEndOf="@+id/et_title"
        app:layout_constraintStart_toStartOf="@+id/et_title"
        app:layout_constraintTop_toBottomOf="@id/et_title">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_country"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/search_background"
        android:hint="@string/lbl_country"
        app:hintTextColor="@color/grey_700"
        app:layout_constraintEnd_toEndOf="@+id/et_slogan"
        app:layout_constraintStart_toStartOf="@+id/et_slogan"
        app:layout_constraintTop_toBottomOf="@id/et_slogan">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_head_quaters"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/lbl_head_quaters"
        android:background="@drawable/search_background"
        app:hintTextColor="@color/grey_700"
        app:layout_constraintEnd_toEndOf="@+id/et_country"
        app:layout_constraintStart_toStartOf="@+id/et_country"
        app:layout_constraintTop_toBottomOf="@id/et_country">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_establish"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/search_background"
        android:hint="@string/established"
        android:inputType="number"
        app:hintTextColor="@color/grey_700"
        app:layout_constraintEnd_toEndOf="@+id/et_head_quaters"
        app:layout_constraintStart_toStartOf="@+id/et_head_quaters"
        app:layout_constraintTop_toBottomOf="@id/et_head_quaters">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/red_btn_background"
        app:backgroundTint="@color/red"
        android:text="@string/bottom_sheet_confirm_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/et_establish"
        app:layout_constraintStart_toStartOf="@+id/et_establish"
        app:layout_constraintTop_toBottomOf="@+id/et_establish" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/white_btn_background"
        android:text="@string/bottom_sheet_cancel_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>