<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.airlinedetailsfragment.AirlineDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_airline_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_left" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_action_bar"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_airline_detail_fragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_airline_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="@dimen/airline_title_text"
                android:textColor="@color/airline_detail_title"
                tools:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_airline_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="TextView"
                android:textSize="@dimen/airline_title_text"
                android:textColor="@color/airline_detail_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_airline_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_airline_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_airline_title" />

            <TextView
                android:id="@+id/tv_airline_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textColor="@color/airline_detail_title"
                android:textSize="@dimen/airline_slogan_text"
                app:layout_constraintEnd_toEndOf="@+id/tv_airline_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_airline_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_airline_country" />

            <TextView
                android:id="@+id/tv_headquarters_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/headquarters"
                android:textColor="@color/airline_detail_title"
                android:textSize="@dimen/airline_headQuaters_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_airline_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_airline_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_airline_slogan" />

            <TextView
                android:id="@+id/tv_headquarters_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:text="TextView"
                android:maxLines="2"
                android:textSize="@dimen/airline_headQuaters_text_details"
                android:textColor="@color/airline_detail_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_headquarters_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_headquarters_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_headquarters_title" />

            <Button
                android:id="@+id/btn_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:background="@drawable/red_btn_background"
                android:text="@string/detail_fragment_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_headquarters_details" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>